# voxel-animator

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/graphics/: cam.rs  depth.rs  init.rs  input.rs  lines.rs  mod.rs  msaa.rs  render.rs  texture.rs  transform.rs  vertex.rs  wgpu_object.rs
src/graphics/shaders/: lines.wgsl  main.wgsl
src/models/: layer.rs  material.rs  mod.rs  model.rs  normal.rs  regen.rs  regen_temp.rs  voxel.rs
src/utils/: consts.rs  log.rs  mod.rs  tests.rs
