[package]
name = "voxel-animator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
winit = { version = "0.29.3", features = ["rwh_05"] }
env_logger = "0.10"
wgpu = "0.19.0"
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
glam = "0.25.0"
cgmath = "0.18.0"
anyhow = "1.0.72"
encase = { version = "0.7.0", features = ["glam"] }